fix - missing word wrap on textarea print mode replacement

--- a/src/app/placeholder/placeholder-text-zone/placeholder-text-zone.component.scss
+++ b/src/app/placeholder/placeholder-text-zone/placeholder-text-zone.component.scss
@@ -10,5 +10,7 @@
         // mimic textare style
         font-size: 12px;
         line-height: normal;
+        white-space: normal;
+        word-wrap: normal;
     }
 }
